@@ -108,7 +108,7 @@ public:
 	virtual void setShowLaserTrails(bool showLaserTrails) = 0;
 	virtual void setShowOwnUserMarker(bool showOwnUserMarker) = 0;
 	virtual void setPointerTracking(bool pointerTracking) = 0;
-	virtual void setShowToggleItems(bool showToggleItems) = 0;
+	virtual void setShowToggleItems(bool showToggleItems, bool leftyMode) = 0;
 
 	virtual void setCatchupProgress(int percent, bool force) = 0;
 	virtual void setStreamResetProgress(int percent) = 0;
